1/25/2025 bis
	Added support for Dutch flat mates, and a test case.

1/25/2025
	Reconfigured select and terminate criteria to unify code behind Parity, Modular, Entropy and Primality. Makes addition of
	any other digit classifications pretty straightforward.
	Implemented new selection criteria: 'ParityMatch' (and EntropyMatch...), and Unique Digits.
	Implemented support for lot lines (Issue #60) 
	
1/24/2025
	Added depth support to skyscrapers clues, so that clues only "see" a fixed number of cells into the puzzle
	Added test cases.
	Moved row/col condition selector to a utility function, simplifying HangingSum implementation, and allowing code to be repurposed for XCount.
	Added an 'Indexed' termination constraint to the hanging code, so that termination can be picked via indexing, a la XSums. While XSums can now be implemented as Hanging Sums, the implementation is quite a bit slower.
	Implemented XCount and XAverage clues via analogous HangingCount and HangingAverage. Added test cases.
	Added 'DigitSet', 'BeforeDigit' and 'AfterDigit' selection criteria for hanging clues.

1/23/2025bis
	Added some test cases.
	Added support for neighbor sets, which assert a cell has a neighbor matching on some property.
	Added additional features to X-Sums, which allows the cell which picks the length of the sum to be in the first given number of cells, or in the first region.

1/23/2025
	Pushed earlier in the day was a "behind-the-scenes" update that cleaned up some base object variables that needed to be duplicated across the code base. Nothing fancy, all tests still passed, some technical debt paid down.
	This latest push contains the implementation of hanging sums. Basically, these give you pretty granular detail on how to pick cells to create